--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -44,12 +44,15 @@
 
   &-wrapper
     display: flex
+    cursor: pointer
 
   &__item
     min-width: 25px
 
   &__select
     display: none
+    position: relative
+    z-index: 999
 
 .arrow
   width: 8px
