--- a/sass/sections/_searchbar.sass
+++ b/sass/sections/_searchbar.sass
@@ -156,7 +156,7 @@
     top: -5px
     left: 0
     right: 0
-    z-index: 10
+    z-index: 9
     background-color: white
     padding-top: 15px
     padding-right: 6rem
